fix footer bug [z-index]

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -25,7 +25,7 @@
 
 .content {
     position: relative;
-    z-index: 1;
+    /* z-index: 1; */
     max-width: 1000px;
     text-align: center;
     display: flex;
